# spaces-bot

./: Dockerfile  Makefile  README.md  cmds.txt  docker-compose.yml  pyproject.toml  requirements.txt
src/: app.py  flask_app.py  langchain_model.py  test_function_framework.py  vertexai_model.py  vertextai_model.py
